next.js/src/components/moleculas/BlogCard/styles.module.scss
.wrapper {
  border: 1px solid var(--background-600);
  position: relative;
  .link {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    z-index: 1;
  }
  a {
    z-index: 2;
    position: relative;
  }
  display: grid;
  align-items: stretch;
  gap: 20px clamp(16px, calc(20vw/7.68), 28px);
  .thumbnail {
    object-fit: cover;
  }
  .createdAt {
    color: var(--background-700);
  }
  .name {
    margin: clamp(16px, calc(28vw/7.68), 28px) 0 clamp(20px, calc(28vw/7.68), 28px);
  }
  .readMore {
    margin: clamp(24px, calc(32vw/7.68), 48px) 0 0 auto;
  }
  .category {
    position: absolute;
    right: -1px;
    top: -1px;
    padding: 12px clamp(16px, calc(16vw/7.68), 20px);
    background: linear-gradient(var(--background-200), var(--background-200)) padding-box, var(--gradient-100) border-box;
    border: 1px solid rgba(255, 255, 255, 0);
  }

  &[data-without-grid="true"]{
    padding: 12px 12px 16px;
    .name {
      font-size: clamp(calc(20rem/16), calc(24vw/7.68), calc(28rem/16));
      margin: clamp(16px, calc(20vw/7.68), 20px) 0 20px;
    }
  }
  &[data-without-grid="false"]{
    padding: clamp(12px, calc(20vw/7.68), 28px)
             clamp(12px, calc(20vw/7.68), 28px)
             clamp(16px, calc(20vw/7.68), 28px);
    @media (min-width: 600px){
      grid-template-columns: 1fr 2fr;
      padding-right: clamp(12px, calc(36vw/7.68), 48px);
    }
    @media (min-width: 900px){
      grid-template-columns: 1fr 1.4fr;
    }
  }
}

